--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
 
 哈哈
   Everything will be ok!
+  
+  <h1><font color="#FF0000">高粱</h1>
+
+<p>最大的失败是放弃 <a
+href="http://user.qzone.qq.com/1253249323">http://1253249323.qzone.qq.com</a> </p>
+
+<p>主页 日志 相册 留言板</p>
+<hr />
+
+<body bgcolor="#81F7F3">
+
+<p>
+您也可以使用图像来作链接：
+<a href="lastpage-2.html">
+<img border="0" src="eg_buttonnext.gif" />
+</a>
+</p>
+
+<p><font color="#FF0000">这段文字的字体颜色为红色。</font></p>
+<p><font color="gray">这段文字的字体颜色为灰色。</font></p>
+<p><font color="#33CC00">这段文字的字体颜色为绿色。</font></p>
   </body>
 </html>
