--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -28,25 +27,46 @@
 哈哈
   Everything will be ok!
   
-  <h1><font color="#FF0000">高粱</h1>
+  <h1><font color="#FF0000">**************************************</h1>
 
-<p>最大的失败是放弃 <a
-href="http://user.qzone.qq.com/1253249323">http://1253249323.qzone.qq.com</a> </p>
-
-<p>主页 日志 相册 留言板</p>
+<p>为什么坚持，想一想当初。 </p>
+<p>    ==导航==  </p>
 <hr />
 
-<body bgcolor="#81F7F3">
+<body bgcolor="#ffffff">
+
 
 <p>
-您也可以使用图像来作链接：
-<a href="lastpage-2.html">
-<img border="0" src="eg_buttonnext.gif" />
+<font color="##3b5998">
+脸书 facebook  
+</font><a
+href="https://www.facebook.com/l.xuhongliang.l">https://www.facebook.com/l.xuhongliang.l</a> </p>
+
+<p>
+<font color="##2E9AFE">
+推特 twitter   
+</font><a
+href="https://twitter.com/l_xuhongliang_l">https://twitter.com/l_xuhongliang_l</a> </p>
+
+<p>
+<font color="#FF4000">
+新浪微博 sina weibo     
+</font><a
+href="http://weibo.com/xinjiangxuhongliang">http://weibo.com/xinjiangxuhongliang</a> </p>
+
+<p>
+<font color="##2E9AFE">
+腾讯微博  tencent weibo     
+</font><a
+href="http://t.qq.com/l_xuhongliang_l">http://t.qq.com/l_xuhongliang_l</a> </p>
+
+
+<p>
+我的头像：
+<a href="https://github.com/xuhongliang">
+<img border="0" src="me.jpg" />
 </a>
 </p>
 
-<p><font color="#FF0000">这段文字的字体颜色为红色。</font></p>
-<p><font color="gray">这段文字的字体颜色为灰色。</font></p>
-<p><font color="#33CC00">这段文字的字体颜色为绿色。</font></p>
   </body>
 </html>
